// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`data slice should add channel segments 1`] = `
{
  "associationConflict": {},
  "beamformingTemplates": {},
  "channels": {
    "beamed": {},
    "filtered": {},
    "raw": {},
  },
  "defaultFilterDefinitionsMap": {
    "filterDefinitionIdsByUsage": {},
    "filterDefinitionsById": {},
    "globalDefaults": {},
  },
  "eventBeams": {},
  "events": {},
  "filterDefinitions": {},
  "filterDefinitionsForSignalDetections": {},
  "filterDefinitionsForUsage": {},
  "fkChannelSegments": {},
  "fkFrequencyThumbnails": {},
  "fkReviewablePhases": {},
  "fkSpectraTemplates": {},
  "predictFeaturesForEventLocation": {},
  "processingMaskDefinitionsByChannels": [],
  "qcSegments": {},
  "queries": {
    "computeFkSpectra": {},
    "findEventBeamsByEventHypothesisAndStations": {},
    "findEventsByAssociatedSignalDetectionHypotheses": {},
    "findQCSegmentsByChannelAndTimeRange": {},
    "getBeamformingTemplates": {},
    "getChannelSegmentsByChannel": {},
    "getChannelsByNamesTimeRange": {},
    "getEventsWithDetectionsAndSegmentsByTime": {},
    "getFilterDefinitionsByUsageMap": {},
    "getFilterDefinitionsForSignalDetections": {},
    "getFkReviewablePhases": {},
    "getFkSpectraTemplates": {},
    "getProcessingMaskDefinitions": {},
    "getRotationTemplates": {},
    "getSignalDetectionWithSegmentsByStationAndTime": {},
    "predictFeaturesForEventLocation": {},
  },
  "rotationTemplates": {},
  "signalDetections": {},
  "uiChannelSegments": {
    "sample": {
      "Unfiltered": [
        {
          "channelSegment": {
            "_uiFilterId": "Unfiltered",
            "id": {
              "channel": {
                "effectiveAt": 1638297900,
                "name": "PDAR.PD01.SHZ",
              },
              "creationTime": 1638297900,
              "endTime": 1638298200,
              "startTime": 1638297900,
            },
            "maskedBy": [],
            "missingInputChannels": [],
            "timeseries": [
              {
                "_uiClaimCheckId": "{"domain":{"startTimeSecs":1638297900,"endTimeSecs":1638298200},"id":{"channel":{"effectiveAt":1638297900,"name":"PDAR.PD01.SHZ"},"startTime":1638297900,"endTime":1638298200,"creationTime":1638297900},"type":"WAVEFORM","filter":"Unfiltered","waveform":{"type":"WAVEFORM","startTime":0,"endTime":100,"sampleCount":10,"sampleRateHz":100}}",
                "endTime": 1638298200,
                "sampleCount": 12000,
                "sampleRateHz": 40,
                "startTime": 1638297900,
                "type": "WAVEFORM",
              },
            ],
            "timeseriesType": "WAVEFORM",
            "units": "NANOMETERS",
          },
          "channelSegmentDescriptor": {
            "channel": {
              "effectiveAt": 1636503404,
              "name": "PDAR.PD01.SHZ",
            },
            "creationTime": 1636503404,
            "endTime": 1636503704,
            "startTime": 1636503404,
          },
          "domainTimeRange": {
            "endTimeSecs": 1638298200,
            "startTimeSecs": 1638297900,
          },
        },
      ],
    },
  },
}
`;

exports[`data slice should add events 1`] = `
{
  "associationConflict": {},
  "beamformingTemplates": {},
  "channels": {
    "beamed": {},
    "filtered": {},
    "raw": {},
  },
  "defaultFilterDefinitionsMap": {
    "filterDefinitionIdsByUsage": {},
    "filterDefinitionsById": {},
    "globalDefaults": {},
  },
  "eventBeams": {},
  "events": {
    "eventID": {
      "id": "eventID",
    },
  },
  "filterDefinitions": {},
  "filterDefinitionsForSignalDetections": {},
  "filterDefinitionsForUsage": {},
  "fkChannelSegments": {},
  "fkFrequencyThumbnails": {},
  "fkReviewablePhases": {},
  "fkSpectraTemplates": {},
  "predictFeaturesForEventLocation": {},
  "processingMaskDefinitionsByChannels": [],
  "qcSegments": {},
  "queries": {
    "computeFkSpectra": {},
    "findEventBeamsByEventHypothesisAndStations": {},
    "findEventsByAssociatedSignalDetectionHypotheses": {},
    "findQCSegmentsByChannelAndTimeRange": {},
    "getBeamformingTemplates": {},
    "getChannelSegmentsByChannel": {},
    "getChannelsByNamesTimeRange": {},
    "getEventsWithDetectionsAndSegmentsByTime": {},
    "getFilterDefinitionsByUsageMap": {},
    "getFilterDefinitionsForSignalDetections": {},
    "getFkReviewablePhases": {},
    "getFkSpectraTemplates": {},
    "getProcessingMaskDefinitions": {},
    "getRotationTemplates": {},
    "getSignalDetectionWithSegmentsByStationAndTime": {},
    "predictFeaturesForEventLocation": {},
  },
  "rotationTemplates": {},
  "signalDetections": {},
  "uiChannelSegments": {},
}
`;

exports[`data slice should add filter definitions 1`] = `
{
  "associationConflict": {},
  "beamformingTemplates": {},
  "channels": {
    "beamed": {},
    "filtered": {},
    "raw": {},
  },
  "defaultFilterDefinitionsMap": {
    "filterDefinitionIdsByUsage": {},
    "filterDefinitionsById": {},
    "globalDefaults": {},
  },
  "eventBeams": {},
  "events": {},
  "filterDefinitions": {
    "Sample Filter Definition Name": {
      "40": {
        "comments": "Sample Filter Definition Comments",
        "filterDescription": {
          "causal": true,
          "comments": "Test description comments",
          "filterType": "LINEAR",
          "highFrequencyHz": 0.8,
          "linearFilterType": "IIR_BUTTERWORTH",
          "lowFrequencyHz": 0.3,
          "order": 2,
          "parameters": {
            "groupDelaySec": 1,
            "sampleRateHz": 40,
            "sampleRateToleranceHz": 20,
            "sosDenominatorCoefficients": [
              4.4,
              5.5,
              6.6,
            ],
            "sosNumeratorCoefficients": [
              1.1,
              2.2,
              3.3,
            ],
          },
          "passBandType": "BAND_PASS",
          "zeroPhase": true,
        },
        "name": "Sample Filter Definition Name",
      },
    },
  },
  "filterDefinitionsForSignalDetections": {},
  "filterDefinitionsForUsage": {},
  "fkChannelSegments": {},
  "fkFrequencyThumbnails": {},
  "fkReviewablePhases": {},
  "fkSpectraTemplates": {},
  "predictFeaturesForEventLocation": {},
  "processingMaskDefinitionsByChannels": [],
  "qcSegments": {},
  "queries": {
    "computeFkSpectra": {},
    "findEventBeamsByEventHypothesisAndStations": {},
    "findEventsByAssociatedSignalDetectionHypotheses": {},
    "findQCSegmentsByChannelAndTimeRange": {},
    "getBeamformingTemplates": {},
    "getChannelSegmentsByChannel": {},
    "getChannelsByNamesTimeRange": {},
    "getEventsWithDetectionsAndSegmentsByTime": {},
    "getFilterDefinitionsByUsageMap": {},
    "getFilterDefinitionsForSignalDetections": {},
    "getFkReviewablePhases": {},
    "getFkSpectraTemplates": {},
    "getProcessingMaskDefinitions": {},
    "getRotationTemplates": {},
    "getSignalDetectionWithSegmentsByStationAndTime": {},
    "predictFeaturesForEventLocation": {},
  },
  "rotationTemplates": {},
  "signalDetections": {},
  "uiChannelSegments": {},
}
`;

exports[`data slice should not add filter definitions 1`] = `
{
  "associationConflict": {},
  "beamformingTemplates": {},
  "channels": {
    "beamed": {},
    "filtered": {},
    "raw": {},
  },
  "defaultFilterDefinitionsMap": {
    "filterDefinitionIdsByUsage": {},
    "filterDefinitionsById": {},
    "globalDefaults": {},
  },
  "eventBeams": {},
  "events": {},
  "filterDefinitions": {},
  "filterDefinitionsForSignalDetections": {},
  "filterDefinitionsForUsage": {},
  "fkChannelSegments": {},
  "fkFrequencyThumbnails": {},
  "fkReviewablePhases": {},
  "fkSpectraTemplates": {},
  "predictFeaturesForEventLocation": {},
  "processingMaskDefinitionsByChannels": [],
  "qcSegments": {},
  "queries": {
    "computeFkSpectra": {},
    "findEventBeamsByEventHypothesisAndStations": {},
    "findEventsByAssociatedSignalDetectionHypotheses": {},
    "findQCSegmentsByChannelAndTimeRange": {},
    "getBeamformingTemplates": {},
    "getChannelSegmentsByChannel": {},
    "getChannelsByNamesTimeRange": {},
    "getEventsWithDetectionsAndSegmentsByTime": {},
    "getFilterDefinitionsByUsageMap": {},
    "getFilterDefinitionsForSignalDetections": {},
    "getFkReviewablePhases": {},
    "getFkSpectraTemplates": {},
    "getProcessingMaskDefinitions": {},
    "getRotationTemplates": {},
    "getSignalDetectionWithSegmentsByStationAndTime": {},
    "predictFeaturesForEventLocation": {},
  },
  "rotationTemplates": {},
  "signalDetections": {},
  "uiChannelSegments": {},
}
`;

exports[`data slice should not add filter definitions 2`] = `
{
  "associationConflict": {},
  "beamformingTemplates": {},
  "channels": {
    "beamed": {},
    "filtered": {},
    "raw": {},
  },
  "defaultFilterDefinitionsMap": {
    "filterDefinitionIdsByUsage": {},
    "filterDefinitionsById": {},
    "globalDefaults": {},
  },
  "eventBeams": {},
  "events": {},
  "filterDefinitions": {},
  "filterDefinitionsForSignalDetections": {},
  "filterDefinitionsForUsage": {},
  "fkChannelSegments": {},
  "fkFrequencyThumbnails": {},
  "fkReviewablePhases": {},
  "fkSpectraTemplates": {},
  "predictFeaturesForEventLocation": {},
  "processingMaskDefinitionsByChannels": [],
  "qcSegments": {},
  "queries": {
    "computeFkSpectra": {},
    "findEventBeamsByEventHypothesisAndStations": {},
    "findEventsByAssociatedSignalDetectionHypotheses": {},
    "findQCSegmentsByChannelAndTimeRange": {},
    "getBeamformingTemplates": {},
    "getChannelSegmentsByChannel": {},
    "getChannelsByNamesTimeRange": {},
    "getEventsWithDetectionsAndSegmentsByTime": {},
    "getFilterDefinitionsByUsageMap": {},
    "getFilterDefinitionsForSignalDetections": {},
    "getFkReviewablePhases": {},
    "getFkSpectraTemplates": {},
    "getProcessingMaskDefinitions": {},
    "getRotationTemplates": {},
    "getSignalDetectionWithSegmentsByStationAndTime": {},
    "predictFeaturesForEventLocation": {},
  },
  "rotationTemplates": {},
  "signalDetections": {},
  "uiChannelSegments": {},
}
`;

exports[`data slice should not add filter definitions 3`] = `
{
  "associationConflict": {},
  "beamformingTemplates": {},
  "channels": {
    "beamed": {},
    "filtered": {},
    "raw": {},
  },
  "defaultFilterDefinitionsMap": {
    "filterDefinitionIdsByUsage": {},
    "filterDefinitionsById": {},
    "globalDefaults": {},
  },
  "eventBeams": {},
  "events": {},
  "filterDefinitions": {},
  "filterDefinitionsForSignalDetections": {},
  "filterDefinitionsForUsage": {},
  "fkChannelSegments": {},
  "fkFrequencyThumbnails": {},
  "fkReviewablePhases": {},
  "fkSpectraTemplates": {},
  "predictFeaturesForEventLocation": {},
  "processingMaskDefinitionsByChannels": [],
  "qcSegments": {},
  "queries": {
    "computeFkSpectra": {},
    "findEventBeamsByEventHypothesisAndStations": {},
    "findEventsByAssociatedSignalDetectionHypotheses": {},
    "findQCSegmentsByChannelAndTimeRange": {},
    "getBeamformingTemplates": {},
    "getChannelSegmentsByChannel": {},
    "getChannelsByNamesTimeRange": {},
    "getEventsWithDetectionsAndSegmentsByTime": {},
    "getFilterDefinitionsByUsageMap": {},
    "getFilterDefinitionsForSignalDetections": {},
    "getFkReviewablePhases": {},
    "getFkSpectraTemplates": {},
    "getProcessingMaskDefinitions": {},
    "getRotationTemplates": {},
    "getSignalDetectionWithSegmentsByStationAndTime": {},
    "predictFeaturesForEventLocation": {},
  },
  "rotationTemplates": {},
  "signalDetections": {},
  "uiChannelSegments": {},
}
`;

exports[`data slice should return the initial state 1`] = `
{
  "associationConflict": {},
  "beamformingTemplates": {},
  "channels": {
    "beamed": {},
    "filtered": {},
    "raw": {},
  },
  "defaultFilterDefinitionsMap": {
    "filterDefinitionIdsByUsage": {},
    "filterDefinitionsById": {},
    "globalDefaults": {},
  },
  "eventBeams": {},
  "events": {},
  "filterDefinitions": {},
  "filterDefinitionsForSignalDetections": {},
  "filterDefinitionsForUsage": {},
  "fkChannelSegments": {},
  "fkFrequencyThumbnails": {},
  "fkReviewablePhases": {},
  "fkSpectraTemplates": {},
  "predictFeaturesForEventLocation": {},
  "processingMaskDefinitionsByChannels": [],
  "qcSegments": {},
  "queries": {
    "computeFkSpectra": {},
    "findEventBeamsByEventHypothesisAndStations": {},
    "findEventsByAssociatedSignalDetectionHypotheses": {},
    "findQCSegmentsByChannelAndTimeRange": {},
    "getBeamformingTemplates": {},
    "getChannelSegmentsByChannel": {},
    "getChannelsByNamesTimeRange": {},
    "getEventsWithDetectionsAndSegmentsByTime": {},
    "getFilterDefinitionsByUsageMap": {},
    "getFilterDefinitionsForSignalDetections": {},
    "getFkReviewablePhases": {},
    "getFkSpectraTemplates": {},
    "getProcessingMaskDefinitions": {},
    "getRotationTemplates": {},
    "getSignalDetectionWithSegmentsByStationAndTime": {},
    "predictFeaturesForEventLocation": {},
  },
  "rotationTemplates": {},
  "signalDetections": {},
  "uiChannelSegments": {},
}
`;

exports[`data slice should return the initial state 2`] = `
{
  "associationConflict": {},
  "beamformingTemplates": {},
  "channels": {
    "beamed": {},
    "filtered": {},
    "raw": {},
  },
  "defaultFilterDefinitionsMap": {
    "filterDefinitionIdsByUsage": {},
    "filterDefinitionsById": {},
    "globalDefaults": {},
  },
  "eventBeams": {},
  "events": {},
  "filterDefinitions": {},
  "filterDefinitionsForSignalDetections": {},
  "filterDefinitionsForUsage": {},
  "fkChannelSegments": {},
  "fkFrequencyThumbnails": {},
  "fkReviewablePhases": {},
  "fkSpectraTemplates": {},
  "predictFeaturesForEventLocation": {},
  "processingMaskDefinitionsByChannels": [],
  "qcSegments": {},
  "queries": {
    "computeFkSpectra": {},
    "findEventBeamsByEventHypothesisAndStations": {},
    "findEventsByAssociatedSignalDetectionHypotheses": {},
    "findQCSegmentsByChannelAndTimeRange": {},
    "getBeamformingTemplates": {},
    "getChannelSegmentsByChannel": {},
    "getChannelsByNamesTimeRange": {},
    "getEventsWithDetectionsAndSegmentsByTime": {},
    "getFilterDefinitionsByUsageMap": {},
    "getFilterDefinitionsForSignalDetections": {},
    "getFkReviewablePhases": {},
    "getFkSpectraTemplates": {},
    "getProcessingMaskDefinitions": {},
    "getRotationTemplates": {},
    "getSignalDetectionWithSegmentsByStationAndTime": {},
    "predictFeaturesForEventLocation": {},
  },
  "rotationTemplates": {},
  "signalDetections": {},
  "uiChannelSegments": {},
}
`;
